--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,13 @@
       <version>20.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.4</version>
+      <scope>provided</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
